cambiando un poco la otra rama

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,8 @@
     <div id="container">
         <div id="cabecera">
             <img id="logo" src="imagenes/dradon.png"/>
-            Hyperblog
-            <span id="tagline"> Tu blog de cabecera</span>
+            Repasando platzi
+            <span id="tagline"> aca otro cambio</span>
         </div>
         <div id="post">
             <h1>titulo atractivo del post</h1>
